integrates/back/deploy/prod/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrates-${NAME}
  namespace: prod-integrates
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: integrates-${NAME}
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 10%
  template:
    metadata:
      labels:
        app: integrates-${NAME}
        # This ensures that the resource is updated on every apply
        uuid: ${UUID}
    spec:
      serviceAccountName: prod-integrates
      nodeSelector:
        worker_group: prod_integrates
      terminationGracePeriodSeconds: 60
      containers:
        - name: back
          image: ghcr.io/fluidattacks/makes/arm64:latest@sha256:1ffac6f1a53559d6c8f12ba084b969acfb76dd65289d1b7db2816cbbdc5b367c
          imagePullPolicy: Always
          command: [sh]
          args:
            - -c
            - m gitlab:fluidattacks/universe@${CI_COMMIT_SHA} /integrates/back/deploy/probes/liveness;
              m gitlab:fluidattacks/universe@${CI_COMMIT_SHA} /integrates/back/deploy/probes/readiness;
              m gitlab:fluidattacks/universe@${CI_COMMIT_SHA} /integrates/back prod
          resources:
            # Ensure your request and limit fits in the node:
            #   kubectl get node --selector=worker_group=prod_integrates
            #   kubectl describe node <node>
            #
            # You can have 1 pod per node, or 2, or 3, etc..
            #
            # Debug if pods were actually able to use the node:
            #   kubectl get pod -n prod-integrates
            #   kubectl describe pod -n prod-integrates <pod>
            requests:
              cpu: 1000m
              memory: 6000Mi
            limits:
              cpu: 2000m
              memory: 6500Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
          ports:
            - containerPort: 8001
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - ~/.cache/makes/out-integrates-back-deploy-probes-readiness/bin/* prod_integrates
                  FluidIntegrates http://localhost:8001
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
            timeoutSeconds: 60
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - ~/.cache/makes/out-integrates-back-deploy-probes-liveness/bin/* prod_integrates
                  FluidIntegrates http://localhost:8001 https://${ENDPOINT}.fluidattacks.com
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
            timeoutSeconds: 60
