integrates/back/deploy/prod/k8s/streams-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streams-${NAME}
  namespace: prod-integrates
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streams-${NAME}
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: streams-${NAME}
        # This ensures that the resource is updated on every apply
        uuid: ${UUID}
    spec:
      serviceAccountName: prod-integrates
      nodeSelector:
        worker_group: prod_integrates
      containers:
        - name: streams
          image: ghcr.io/fluidattacks/makes/arm64:latest@sha256:1ffac6f1a53559d6c8f12ba084b969acfb76dd65289d1b7db2816cbbdc5b367c
          imagePullPolicy: Always
          command: [sh]
          args:
            - -c
            - m gitlab:fluidattacks/universe@${CI_COMMIT_SHA} /integrates/streams consumer prod
          resources:
            # Ensure your request and limit fits in the node:
            #   kubectl get node --selector=worker_group=prod_integrates
            #   kubectl describe node <node>
            #
            # You can have 1 pod per node, or 2, or 3, etc..
            #
            # Debug if pods were actually able to use the node:
            #   kubectl get pod -n prod-integrates
            #   kubectl describe pod -n prod-integrates <pod>
            requests:
              cpu: 1000m
              memory: 3800Mi
            limits:
              cpu: 2000m
              memory: 7600Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
          readinessProbe:
            exec:
              command:
                - cat
                - /tmp/ready
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
            timeoutSeconds: 1
