integrates/back/deploy/prod/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: integrates-${NAME}
  namespace: prod-integrates
spec:
  type: NodePort
  ports:
    - name: integrates
      port: 81
      targetPort: 8001
      protocol: TCP
  selector:
    app: integrates-${NAME}
